# palm-outsourcing-hidden-deals-task

./: .gitignore  Makefile  README.md  package-lock.json  scrape.py
api/: README.md  package-lock.json  package.json
api/src/: app.js  index.js
api/src/lib/: filters.js  scrapeJob.js  store.js
api/src/routes/: listings.js  scrape.js
api/tests/: listings.test.js
data/: listings.json
scraper/: README.md  pyproject.toml
scraper/src/scraper/: http.py  main.py  models.py  parser.py
scraper/tests/: test_parser.py
scraper/tests/fixtures/: page_1.html  page_2.html
wordpress/: README.md
wordpress/plugin/hidden-deals/: hidden-deals.php  readme.txt
wordpress/react-app/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
wordpress/react-app/public/: mock.json
wordpress/react-app/src/: App.module.css  App.tsx  main.tsx
wordpress/react-app/src/components/: EmptyState.module.css  EmptyState.tsx  ErrorState.module.css  ErrorState.tsx  Filters.module.css  Filters.tsx  ListingDrawer.module.css  ListingDrawer.tsx  ListingGallery.module.css  ListingGallery.tsx  ListingsTable.module.css  ListingsTable.tsx  ScrapeTrigger.module.css  ScrapeTrigger.tsx  Sentinel.tsx  SkeletonRows.module.css  SkeletonRows.tsx  StatBar.module.css  StatBar.tsx
wordpress/react-app/src/hooks/: useListings.ts  useScrape.ts  useUrlFilters.ts
wordpress/react-app/src/lib/: api.ts  priceFormat.ts  sort.ts  types.ts  urlState.ts
wordpress/react-app/src/styles/: fonts.css  reset.css  tokens.css
